--- a/Task Tracker/Task Tracker.csproj
+++ b/Task Tracker/Task Tracker.csproj
@@ -79,10 +79,15 @@
     <Compile Include="Model\Task.cs" />
     <Compile Include="Model\WorkLog.cs" />
     <Compile Include="Model\WorkStates.cs" />
+    <Compile Include="ViewModel\Commands\NewTaskCommand.cs" />
+    <Compile Include="ViewModel\Commands\NewWorkLogCommand.cs" />
+    <Compile Include="ViewModel\Commands\SubmitWorkLogCommand.cs" />
     <Compile Include="ViewModel\WorkLogVM.cs" />
     <Compile Include="View\TaskTrackerWindow.xaml.cs">
       <DependentUpon>TaskTrackerWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\UserControls\TaskControl.xaml.cs" />
+    <Compile Include="View\UserControls\WorkLogUserControl.xaml.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -115,6 +120,14 @@
     <Page Include="View\TaskTrackerWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\UserControls\TaskControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="View\UserControls\WorkLogUserControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
   <ItemGroup />
