Removed additional classes that are no longer needed. New work logs can now be created. Work logs are stored in a SQLite DB. Work logs are loaded at start up.

--- a/Task Tracker/Task Tracker.csproj
+++ b/Task Tracker/Task Tracker.csproj
@@ -76,10 +76,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Model\Task.cs" />
     <Compile Include="Model\WorkLog.cs" />
-    <Compile Include="Model\WorkStates.cs" />
-    <Compile Include="ViewModel\Commands\NewTaskCommand.cs" />
+    <Compile Include="ViewModel\Commands\DeleteWorkLogCommand.cs" />
     <Compile Include="ViewModel\Commands\NewWorkLogCommand.cs" />
     <Compile Include="ViewModel\Commands\SubmitWorkLogCommand.cs" />
     <Compile Include="ViewModel\DatabaseHelperClass.cs" />
